--- a/PokedexNew/Info.plist
+++ b/PokedexNew/Info.plist
@@ -21,5 +21,7 @@
 			</array>
 		</dict>
 	</dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>we use your location  to show nearby pokemons</string>
 </dict>
 </plist>
